--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ const questions = [
     type: "image",
     question: "Как называется эта знаменитая достопримечательность Стамбула?",
     image: "Natasha.jpg",
-    options: ["Султанахмет", "Галатская башня", "Айя-София", "Топкапы"],
+    options: ["Султанахмет", "Галатская башня", "Наташа", "Топкапы"],
     correctIndex: 2
   },
   {
